...
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectMood">

        <LinearLayout
            android:id="@+id/moodHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

...
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutMoodsRow2" />

    <EditText
        android:id="@+id/etReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext"
...
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSocialSituation">

        <Spinner
            android:id="@+id/socialSituationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
...
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>

    <!-- Add Mood Button -->
    <Button
        android:id="@+id/btnAddMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_violet"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
...
