...
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="searchView,btnFilter"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMoodEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomNav"
...
