...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/moodPosts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="146"
                                android:textColor="#5A4A7E"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="18sp"
...

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#9FE2DD"
        android:contentDescription="Add new mood"
...
